[package]
authors = ["Tobias Bucher <tobiasbucher5991@gmail.com>", "hch12907 <>"]
name = "dire"
version = "0.3.1"

description = "A library for querying operating system specific directories"
repository = "https://github.com/tbu-/dirs"
license = "MIT/Apache-2.0"

[[bin]]
doc = false
name = "dirs"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.2"
features = [
    "combaseapi",
    "shlobj",
    "winerror",
]
